<resources>
    <string name="app_name">Event By LV</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="start_time">Le %1$s à %2$s</string>
    <string name="end_time">jusqu\'à %1$s</string>
    <string name="transition_name_event_title">transition_title</string>

    <string name="label_event_name">Nom de l\'event</string>
    <string name="label_event_address">Adresse du lieu</string>
    <string name="label_event_date">Commence le</string>
    <string name="label_event_time">à</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="streetview_picture_base_url">https://maps.googleapis.com/maps/api/streetview?size=%1$s&amp;key=%2$s&amp;location=</string>
    <string name="duration_input_value">Fin prévue %1$dh après</string>
    <string name="transition_add_btn">transition_add_btn</string>

    <string name="label_location_name">Lieu de RDV</string>
    <string name="all_types">Tous types</string>
    <string name="categorie_label">Catégorie:</string>
    <string name="error_list">une erreur est survenue lors de l\'affichage des events</string>
    <string name="success_new">Les autres partners peuvent désormais participer à cet évènement</string>
    <string name="error_new">Désolé, une erreur est survenue lors de l\'enregistrement de</string>
    <string name="success_location_permission">Merci, votre position sera utilisée pour l\'autocomplete d\'adresse</string>
    <string name="refuse_location_permission">Les bureaux d\'LV Paris sont pris en compte comme position d\'origine de l\'autocomplete d\'adresse</string>
    <string name="error_google_api_connection">impossible de se connecter</string>
    <string name="error_list_categories">Désolé une erreur s\'est produite durant la récupération des catégories</string>
    <string name="participants_nb">%1$s partner(s) participe(nt)</string>
    <string name="meet_at">RDV à %1$s</string>
    <string name="start_at">Le %1$s</string>

    <string name="proposed_by">Proposé par</string>
    <string name="required_field_error_message">Ce champs est obligatoire</string>
    <string name="form_fiels_all_required_message">Tous les champs sont nécessaires</string>
    <string name="error_list_category">une erreur est survenue lors de l\'affichage des catégories</string>
    <string name="error_subscription">Désolé, nous n\'avons pas sauvegarder votre modification d\'inscription</string>
    <string name="transition_title">title</string>

</resources>
