<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/new_event_container"
    tools:context="com.link_value.eventlv.View.Create.NewEventLvActivity"
    android:animateLayoutChanges="true"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/lg_padding"
        android:hint="@string/label_event_name"
        app:layout_constraintTop_toBottomOf="parent">
        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categorie_label"
        android:labelFor="@+id/categories_spinner"
        android:padding="@dimen/lg_padding"
        android:layout_margin="@dimen/lg_padding"
        android:textSize="@dimen/md_text"
        app:layout_constraintTop_toBottomOf="@+id/event_name"
        />
    <Spinner
        android:id="@+id/categories_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/lg_padding"
        android:layout_margin="@dimen/lg_padding"
        app:layout_constraintTop_toBottomOf="@+id/event_name"
        app:layout_constraintLeft_toRightOf="@id/category_label"
        app:layout_constraintRight_toRightOf="parent"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/event_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/lg_padding"
        android:hint="@string/label_event_address"
        app:layout_constraintTop_toBottomOf="@+id/category_label"
        >
        <AutoCompleteTextView
            android:id="@+id/input_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/powered_by_google_light"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/event_location_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/lg_padding"
        android:hint="@string/label_location_name"
        app:layout_constraintTop_toBottomOf="@+id/event_address">

        <EditText
            android:id="@+id/input_location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:gravity="center_vertical"
        android:padding="@dimen/lg_padding"
        android:paddingEnd="4dp"
        android:text="@string/label_event_date"
        android:textSize="@dimen/md_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_location_name" />

    <TextView
        android:id="@+id/input_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:ems="6"
        android:gravity="center_vertical|start"
        android:padding="@dimen/lg_padding"
        android:textSize="@dimen/md_text"
        app:layout_constraintStart_toEndOf="@+id/event_date"
        app:layout_constraintTop_toBottomOf="@+id/event_location_name" />

    <TextView
        android:id="@+id/event_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:gravity="center_vertical"
        android:padding="@dimen/lg_padding"
        android:paddingEnd="4dp"
        android:text="@string/label_event_time"
        android:textSize="@dimen/md_text"
        app:layout_constraintLeft_toRightOf="@+id/input_date"
        app:layout_constraintTop_toBottomOf="@+id/event_location_name" />

    <TextView
        android:id="@+id/input_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:ems="4"
        android:gravity="center_vertical|start"
        android:padding="@dimen/lg_padding"
        android:textSize="@dimen/md_text"
        app:layout_constraintStart_toEndOf="@+id/event_time"
        app:layout_constraintTop_toBottomOf="@+id/event_location_name" />

    <TextView
        android:id="@+id/event_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_marginTop="32dp"
        android:textSize="@dimen/md_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_date" />

    <SeekBar
        android:id="@+id/input_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_marginTop="32dp"
        android:max="48"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/event_duration"
        app:layout_constraintTop_toBottomOf="@id/event_date" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="100dp" />

    <ImageButton
        android:id="@+id/propose_event"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:background="@color/colorAccent"
        android:padding="@dimen/lg_padding"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:src="@drawable/ic_save"
        android:transitionName="@string/transition_add_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />
</android.support.constraint.ConstraintLayout>
